# SpectralEvaluation

./: .editorconfig  .gitignore  Build_UnixMake.sh  Build_VisualStudio2017.cmd  Build_VisualStudio2019.cmd  Build_VisualStudio2022.cmd  CMakeLists.txt  Defintions.h  README.md  Utils.cpp  Utils.h  VectorUtils.cpp  VectorUtils.h
.github/workflows/: BuildOnUbuntuLatest.yml  BuildOnWindows.yml
Configuration/: CMakeLists.txt
Evaluation/: BasicMath.cpp  BasicMath.h  CMakeLists.txt  CrossSectionData.cpp  CrossSectionData.h  EvaluationBase.cpp  EvaluationBase.h  EvaluationResult.cpp  EvaluationResult.h  FitParameter.h  FitWindow.cpp  FitWindow.h  RatioEvaluation.cpp  RatioEvaluation.h  ReferenceFile.cpp  ReferenceFile.h  ReferenceFitResult.cpp  ReferenceFitResult.h  ScanEvaluationBase.cpp  SpectralEvaluationBase.cpp  SpectralEvaluationBase.h
File/: CMakeLists.txt  File.cpp  MKPack.cpp  STDFile.cpp  STDFile.h  ScanFileHandler.cpp  ScanFileHandler.h  SpectrumIO.cpp  SpectrumIO.h  TXTFile.cpp
Fit/: BSpline.cxx  BSplineF.cxx  BSplineImpl.h  CMakeLists.txt  ConstFunction.h  ConvoluteFunction.h  ConvolutionCoreFunction.h  CubicBSplineFunction.h  DiscreteFunction.h  ExpFunction.h  Fit.h  FitBasic.h  FitException.h  Function.h  GaussFunction.h  LnFunction.h  Matrix.h  MessageLog.cpp  MessageLog.h  Minimizer.h  MulFunction.h  NegateFunction.h  NonlinearParameterFunction.h  ParamFunction.h  ParameterLinkItem.h  ParameterVector.h  README.md  ReferenceSpectrumFunction.h  SimpleDOASFunction.h  StandardMetricFunction.h  StatisticVector.h  Vector.h
Flux/: CMakeLists.txt  Flux.cpp  FluxResult.cpp  FluxResult.h  PlumeHeight.cpp  PlumeHeight.h  PlumeInScanProperty.cpp  PlumeInScanProperty.h  WindField.cpp  WindField.h  WindFieldRecord.cpp  WindFieldRecord.h
Spectra/: CMakeLists.txt  DateTime.cpp  DateTime.h  GPSData.cpp  GPSData.h  ReferenceSpectrumConvolution.cpp  ReferenceSpectrumConvolution.h  SpectrometerModel.cpp  Spectrum.cpp  Spectrum.h  SpectrumInfo.cpp  SpectrumInfo.h
UnitTests/: CMakeLists.txt  IntegrationTest_ScanFileHandler.cpp  IntegrationTest_SpectrumIO.cpp  IntegrationTests_Correspondence.cpp  IntegrationTests_DarkSpectrum.cpp  IntegrationTests_DoasFit.cpp  IntegrationTests_EvaluationBase.cpp  IntegrationTests_File.cpp  IntegrationTests_FitWindowFileHandler.cpp  IntegrationTests_InstrumentCalibrationInStdFile.cpp  IntegrationTests_InstrumentLineShapeEstimationFromDoas.cpp  IntegrationTests_InstrumentLineShapeEstimationFromKeypointDistance.cpp  IntegrationTests_InstrumentLineshapeCalibrationController.cpp  IntegrationTests_PlumeSpectrumSelector.cpp  IntegrationTests_RatioCalculationController.cpp  IntegrationTests_RatioEvaluation.cpp  IntegrationTests_ScanEvaluationLogFileHandler.cpp  IntegrationTests_ScanFileHandler.cpp  IntegrationTests_SpectrumIO.cpp  IntegrationTests_StdFile.cpp  IntegrationTests_WavelengthCalibration.cpp  IntegrationTests_WavelengthCalibrationController.cpp  TestData.h  UnitTest_Air.cpp  UnitTest_CVector.cpp  UnitTest_Convolution.cpp  UnitTest_Correspondence.cpp  UnitTest_CrossSectionData.cpp  UnitTest_DateTime.cpp  UnitTest_EvaluationResult.cpp  UnitTest_Fft.cpp  UnitTest_File.cpp  UnitTest_FindPlume.cpp  UnitTest_FitExtensions.cpp  UnitTest_FitInstrumentLineShapeFunction.cpp  UnitTest_FitWindow.cpp  UnitTest_GpsData.cpp  UnitTest_GuardedList.cpp  UnitTest_InstrumentLineShape.cpp  UnitTest_InstrumentLineShapeEstimation.cpp  (+10 more)
include/SpectralEvaluation/: Air.h  DateTime.h  Definitions.h  EstimatedValue.h  Exceptions.h  GPSData.h  Geometry.h  Interpolation.h  Log.h  Molecule.h  NovacEnums.h  NullableValue.h  Statistics.h  StringUtils.h  ThreadUtils.h  Units.h  Utils.h  VectorUtils.h
include/SpectralEvaluation/Calibration/: Correspondence.h  CrossSectionSpectrumGenerator.h  FraunhoferSpectrumGeneration.h  InstrumentCalibration.h  InstrumentLineShape.h  InstrumentLineShapeEstimation.h  ReferenceSpectrumConvolution.h  StandardCrossSectionSetup.h  WavelengthCalibration.h  WavelengthCalibrationByRansac.h
include/SpectralEvaluation/Configuration/: DarkSettings.h  RatioEvaluationSettings.h  SkySettings.h
include/SpectralEvaluation/DialogControllers/: InstrumentLineshapeCalibrationController.h  NovacProgramWavelengthCalibrationController.h  ReadMe.md  (+2 more)
rapidxml/: CMakeLists.txt
src/: DateTime.cpp  EstimatedValue.cpp  GPSData.cpp  Geometry.cpp  Interpolation.cpp  Log.cpp  Molecule.cpp  NovacEnums.cpp  NullableValue.cpp  Statistics.cpp  StringUtils.cpp  Utils.cpp  VectorUtils.cpp
src/Calibration/: CMakeLists.txt  Correspondence.cpp  CrossSectionSpectrumGenerator.cpp  FraunhoferSpectrumGeneration.cpp  InstrumentCalibration.cpp  InstrumentLineShape.cpp  InstrumentLineShapeEstimation.cpp  ReferenceSpectrumConvolution.cpp  StandardCrossSectionSetup.cpp  WavelengthCalibration.cpp  WavelengthCalibrationByRansac.cpp
src/Configuration/: CMakeLists.txt
src/DialogControllers/: CMakeLists.txt  InstrumentLineshapeCalibrationController.cpp  NovacProgramWavelengthCalibrationController.cpp  RatioCalculationController.cpp  ReferenceCreationController.cpp  WavelengthCalibrationController.cpp
src/Evaluation/: BasicMath.cpp  BasicScanEvaluationResult.cpp  CMakeLists.txt  CrossSectionData.cpp  DarkSpectrum.cpp  DoasFit.cpp  DoasFitPreparation.cpp  EvaluationBase.cpp  EvaluationResult.cpp  FitWindow.cpp  PlumeSpectrumSelector.cpp  RatioEvaluation.cpp  ReferenceFile.cpp  ReferenceFitResult.cpp  ScanEvaluationBase.cpp  WavelengthFit.cpp
src/File/: CMakeLists.txt  File.cpp  FitWindowFileHandler.cpp  MKPack.cpp  STDFile.cpp  ScanEvaluationLogFileHandler.cpp  ScanFileHandler.cpp  SpectrumIO.cpp  TXTFile.cpp  XmlUtil.cpp
src/Fit/: CMakeLists.txt  MessageLog.cpp
src/FitExtensions/: CMakeLists.txt
src/Flux/: CMakeLists.txt  Flux.cpp  PlumeInScanProperty.cpp  ScanFluxResult.cpp
src/Math/: CMakeLists.txt  FFT.cpp  FunctionFit.cpp  PolynomialFit.cpp  SpectrumMath.cpp
src/Spectra/: CMakeLists.txt  InstrumentLineShape.cpp  ReferenceSpectrumConvolution.cpp  Scattering.cpp  SpectrometerModel.cpp  Spectrum.cpp  SpectrumInfo.cpp  SpectrumUtils.cpp  WavelengthCalibration.cpp
(+80 files in other folders)
